--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -18,7 +18,7 @@ jobs:
           php-version: '8.1'
           coverage: none
           ini-values: opcache.enable=1, opcache.enable_cli=1, opcache.validate_timestamps=0, opcache.file_cache = "/opcache"
-          extensions: mbstring, ext-zend-opcache, ext-fileinfo
+          extensions: mbstring, opcache, fileinfo
 
       - uses: actions/checkout@v2
 
@@ -38,7 +38,7 @@ jobs:
         run: composer install --working-dir=${GITHUB_WORKSPACE}/test/sampleProject --prefer-dist --no-progress
 
       - name: Compile Files
-        run: ${GITHUB_WORKSPACE}/test/sampleProject/vendor/bin/cactus --noPrompt > ${GITHUB_WORKSPACE}/test/compilation-log 2>&1 &
+        run: ${GITHUB_WORKSPACE}/test/sampleProject/vendor/bin/cactus --noPrompt
 
       - name: Run tests
         run: php ${GITHUB_WORKSPACE}/test/sampleProject/vendor/phpunit/phpunit/phpunit ${GITHUB_WORKSPACE}/test/sampleProject/tests
