--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -37,6 +37,9 @@ jobs:
       - name: Install dependencies
         run: composer install --working-dir=${GITHUB_WORKSPACE}/test/sampleProject --prefer-dist --no-progress
 
+      - name: Check PHP Installation
+        run: php -i
+
       - name: Compile Files
         run: ${GITHUB_WORKSPACE}/test/sampleProject/vendor/bin/cactus --noPrompt
 
