--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: actions/checkout@v2
       
       - name: Install php 8.0
-        run: rm /etc/apt/sources.list.d/ondrej-php-* && apt-get update && apt-get -y install software-properties-common && add-apt-repository ppa:ondrej/php && sudo apt-get update && apt-get -y install php8.0 php8.0-opcache php8.0-fileinfo
+        run: sudo apt-get update && apt-get -y install php php-opcache php-fileinfo
 
       - name: Validate composer.json and composer.lock
         run: composer validate --strict
