--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: actions/checkout@v2
       
       - name: Install php 8.0
-        run: sudo apt-get update && apt-get -y install php php-opcache php-fileinfo
+        run:  apt install lsb-release ca-certificates apt-transport-https software-properties-common -y && apt update && apt install php8.0
 
       - name: Validate composer.json and composer.lock
         run: composer validate --strict
