--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -19,8 +19,11 @@ jobs:
       - uses: actions/checkout@v2
       
       - name: Install php 8.0
-        run:  apt install lsb-release ca-certificates software-properties-common -y && apt update && add-apt-repository ppa:ondrej/php && apt install php8.0 -y
+        run:  apt install lsb-release ca-certificates software-properties-common -y && apt update && add-apt-repository ppa:ondrej/php && apt update && apt install unzip php8.0 php8.0-opcache -y
 
+      - name: Install composer
+        run: curl -sS https://getcomposer.org/installer -o /tmp/composer-setup.php && php /tmp/composer-setup.php --install-dir=/usr/local/bin --filename=composer
+        
       - name: Validate composer.json and composer.lock
         run: composer validate --strict
 
