--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -18,6 +18,9 @@ jobs:
     steps:        
       - uses: actions/checkout@v2
       
+      - name: Install composer
+        run: curl -sS https://getcomposer.org/installer -o /tmp/composer-setup.php && php /tmp/composer-setup.php --install-dir=/usr/local/bin --filename=composer
+      
       - name: Validate composer.json and composer.lock
         run: composer validate --strict
 
