--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -18,6 +18,12 @@ jobs:
     steps:        
       - uses: actions/checkout@v2
       
+      - name: Install OPCache
+        run: docker-php-ext-install opcache && docker-php-ext-enable opcache
+      
+      - name: Enable OPCache
+        run: echo 'opcache.enable=1\n opcache.enable_cli=1  \n opcache.validate_timestamps=0\n opcache.file_cache = /tmp/cache\n' >> /usr/local/etc/php/conf.d/opcache.ini
+      
       - name: Install composer
         run: curl -sS https://getcomposer.org/installer -o /tmp/composer-setup.php && php /tmp/composer-setup.php --install-dir=/usr/local/bin --filename=composer
       
