--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: actions/checkout@v2
       
       - name: Fix Permissions
-        run: chmod -R 777 /tmp/cache
+        run: mkdir /tmp/cache && chmod -R 777 /tmp/cache
       
       - name: Install Dependencies
         run: apt-get update && apt-get install -y git zip unzip
