--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -49,7 +49,9 @@ jobs:
         run: composer install --working-dir=${GITHUB_WORKSPACE}/test/sampleProject --prefer-dist --no-progress
 
       - name: Compile Files
-        run: ${GITHUB_WORKSPACE}/test/sampleProject/vendor/bin/cactus --noPrompt
+        working-directory: ${GITHUB_WORKSPACE}/test/sampleProject
+        run: vendor/bin/cactus --noPrompt --dir toBeCompiled
 
       - name: Run tests
-        run: php ${GITHUB_WORKSPACE}/test/sampleProject/vendor/phpunit/phpunit/phpunit --configuration ${GITHUB_WORKSPACE}/test/sampleProject/phpunit.xml
+        working-directory: ${GITHUB_WORKSPACE}/test/sampleProject
+        run: vendor/phpunit/phpunit/phpunit --configuration phpunit.xml
